# date-operations

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  coverage.xml  pyproject.toml  release-notes.md
.github/workflows/: latest-changes.yml  unit-tests.yml
date_operations/: __init__.py  main.py  settings.py
tests/: test_main.py
