[tool.poetry]
name = "date-operations"
version = "0.1.0"
description = ""
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]
readme = "README.md"
packages = [{include = "date_operations"}]

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.5"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
