[tool.poetry]
name = "date-operations"
version = "0.2.0"
description = "🗓 Easy to use functions for common date operations"
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jalvaradosegura/date-operations"
repository = "https://github.com/jalvaradosegura/date-operations"
packages = [{include = "date_operations"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["date_operations"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
